--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.rushucloud.reim"
         minSdkVersion 14
         targetSdkVersion 21
-        versionCode 1
-        versionName "0.7"
+        versionCode 2
+        versionName "0.7.1"
     }
 
     buildTypes {
@@ -65,6 +65,7 @@ dependencies {
     compile files('libs/mechat_1.1.0.jar')
     compile files('libs/rebound-0.3.7.jar')
     compile files('libs/umeng-analytics-v5.4.1.jar')
+    compile files('libs/umeng-update-v2.6.0.1.jar')
     compile files('libs/umeng_social_sdk.jar')
     compile files('libs/universal-image-loader-1.9.0.jar')
     compile files('libs/pinyin4j-2.5.0.jar')
