--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     defaultConfig {
         applicationId "com.rushucloud.reim"
         minSdkVersion 14
-        targetSdkVersion 21
+        targetSdkVersion 22
         versionCode 4
         versionName "0.8"
     }
@@ -37,6 +37,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.2.4'
     //noinspection GradleCompatible
     compile 'com.android.support:appcompat-v7:20.0.0'
+    compile "org.java-websocket:Java-WebSocket:1.3.0"
     compile files('libs/BeeCloud.jar')
     compile files('libs/SocialSDK_QQZone_1.jar')
     compile files('libs/SocialSDK_QQZone_2.jar')
