--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,27 +34,15 @@ android {
 }
 
 dependencies {
-//    compile 'com.google.code.gson:gson:2.2.4'
-//    //noinspection GradleCompatible
-//    compile 'com.android.support:appcompat-v7:20.0.0'
     compile 'com.google.code.gson:gson:2.3'
     compile 'com.android.support:appcompat-v7:22.1.1'
-//    compile "org.java-websocket:Java-WebSocket:1.3.0"
     compile files('libs/BeeCloud.jar')
     compile files('libs/SocialSDK_QQZone_1.jar')
     compile files('libs/SocialSDK_QQZone_2.jar')
     compile files('libs/SocialSDK_QQZone_3.jar')
     compile files('libs/SocialSDK_Sina.jar')
-    compile files('libs/SocialSDK_WeiXin_1.jar')
-    compile files('libs/SocialSDK_WeiXin_2.jar')
     compile files('libs/SocialSDK_email.jar')
-    compile files('libs/SocialSDK_evernote.jar')
-    compile files('libs/SocialSDK_renren_1.jar')
-    compile files('libs/SocialSDK_renren_2.jar')
     compile files('libs/SocialSDK_sms.jar')
-    compile files('libs/SocialSDK_yixin_1.jar')
-    compile files('libs/SocialSDK_yixin_2.jar')
-    compile files('libs/SocialSDK_ynote.jar')
     compile files('libs/achartengine-1.1.0.jar')
     compile files('libs/android-async-http-1.4.4-fix.jar')
     compile files('libs/avoscloud-v2.6.6.jar')
@@ -64,6 +52,7 @@ dependencies {
     compile files('libs/httpcore-4.3.2.jar')
     compile files('libs/httpmime-4.3.5.jar')
     compile files('libs/library-1.2.2.jar')
+    compile files('libs/libammsdk.jar')
     compile files('libs/locSDK_4.2.jar')
     compile files('libs/mechat_1.1.0.jar')
     compile files('libs/rebound-0.3.7.jar')
