--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -349,10 +349,9 @@
         
 		<activity 
 		    android:name=".wxapi.WXEntryActivity"
-			android:theme="@android:style/Theme.Translucent.NoTitleBar"
-			android:configChanges="keyboardHidden|orientation|screenSize"
+            android:label="@string/app_name"
 			android:exported="true"
-			android:screenOrientation="portrait"/>
+            android:launchMode="singleTask"/>
         
         <!-- ############ QQ空间和QQ SSO授权的Activity注册 ############ -->
 		<activity 
