fix bugs of regex

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,9 +8,18 @@ android {
         applicationId "com.rushucloud.reim"
         minSdkVersion 14
         targetSdkVersion 22
-        versionCode 5
-        versionName "0.9"
+        versionCode 6
+        versionName "0.95"
     }
+
+//    signingConfigs {
+//        debug {
+//            storeFile file("android_keystore")
+//            storePassword "19901228"
+//            keyAlias "androidkey"
+//            keyPassword "19901228"
+//        }
+//    }
 
     buildTypes {
         release {
