--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.rushucloud.reim"
         minSdkVersion 14
         targetSdkVersion 22
-        versionCode 7
-        versionName "1.0"
+        versionCode 8
+        versionName "1.0.1"
     }
 
     signingConfigs {
@@ -61,4 +61,5 @@ dependencies {
     compile files('libs/umeng-update-v2.6.0.1.jar')
     compile files('libs/universal-image-loader-1.9.0.jar')
     compile files('libs/pinyin4j-2.5.0.jar')
+    compile files('libs/mechat_1.1.3.jar')
 }
