--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
 	<uses-permission android:name="android.permission.READ_LOGS"/>
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
     
     <application 
         android:allowBackup="true" 
@@ -347,7 +348,7 @@
             android:theme="@android:style/Theme.Translucent.NoTitleBar">
         </activity>
 
-        <!-- ###################  注册SDK使用的Activity  ###################### -->
+        <!-- ###################  微信  ###################### -->
 		<activity 
 		    android:name=".wxapi.WXEntryActivity"
             android:label="@string/app_name"
@@ -371,6 +372,18 @@
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="isVHfH894tfsLVOVdXlGdlKz"/>
         <service android:name="com.baidu.location.f" android:enabled="true" android:process=":remote"/>
+
+        <!-- ################### 美洽 ################## -->
+        <activity
+            android:name="com.mechat.mechatlibrary.ui.ConversationActivity"
+            android:theme="@android:style/Theme.Light"
+            android:launchMode="singleTask"/>
+        <activity android:name="com.mechat.mechatlibrary.ui.ZoomImageActivity"/>
+
+        <service
+            android:name="com.mechat.mechatlibrary.MechatService"
+            android:label="MechatService" >
+        </service>
 
 	</application>
 </manifest>
